syntax = "proto3";

package where_child_bus.v1;

import "where_child_bus/v1/resources.proto";
import "google/protobuf/field_mask.proto";

service StationService {
        rpc UpdateStationLocationByGuardianId(UpdateStationLocationByGuardianIdRequest) returns (UpdateStationLocationByGuardianIdResponse);
        rpc GetStationListByBusId(GetStationListByBusIdRequest) returns (GetStationListByBusIdResponse);
        rpc UpdateStation(UpdateStationRequest) returns (UpdateStationResponse);
}

message UpdateStationLocationByGuardianIdRequest {
        string guardian_id = 1;
        double longitude = 2;
        double latitude = 3;
}

message UpdateStationLocationByGuardianIdResponse {
        Station station = 1;
}

message GetStationListByBusIdRequest {
        string bus_id = 1;
}

message GetStationListByBusIdResponse {
        repeated Station stations = 1;
        repeated GuardianResponse guardians = 2;
        repeated Child children = 3;
        repeated ChildPhoto photos = 4;
}

message UpdateStationRequest {
        string id  = 1;
        double latitude = 2;
        double longitude = 3;
        google.protobuf.FieldMask update_mask = 4;
}

message UpdateStationResponse {
        Station station = 1;
}